# etl-valorant

./: README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: tests.yaml
docker/: jupyterlab.Dockerfile  spark.Dockerfile
jobs/: spark-submit-test.py
resources/: script_etl.py
workspace/: jupyterlab.sh  spark-submit.sh  spark.sh
