[tool.poetry]
name = "valorant"
version = "0.1.0"
description = ""
authors = ["Phill-Andrade <felipe23freitas03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
requests = "2.31.0"
flake8-pyproject = "1.2.3"


[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E129"]
max-line-length = 79